--- a/index.html
+++ b/index.html
@@ -109,6 +109,10 @@
 	</script>
 
 
+	<link href="bitrix/css/star.notification/notifbd2c.css?15871152272224" type="text/css" rel="stylesheet" />
+	<link href="bitrix/cache/css/s1/is/template_14f30e5f72e50ba1ca06d3c4f6f3b379/template_14f30e5f72e50ba1ca06d3c4f6f3b379_v1afe2.css?1589527280197911" type="text/css" data-template-style="true" rel="stylesheet" />
+
+
 	<meta property="og:locale" content="ru_RU" />
 	<meta property="og:type" content="article" />
 	<meta property="og:title" content="iSupport - сервисный центр Apple | iSupport" />
@@ -118,6 +122,7 @@
 	<meta property="og:image" content="/images/logo.svg" />
 
 	<title>iSupport - сервисный центр Apple | iSupport</title>
+
 
 </head>
 
@@ -653,6 +658,10 @@
 		})
 
 	</script>
+	<script src="bitrix/templates/is/js/bootstrap.min.js"></script>
+	<script src="bitrix/templates/is/js/jquery.bxslider.js"></script>
+	<script src="bitrix/templates/is/js/custom3860.js?v=1"></script>
+	<script src="bitrix/templates/is/js/maskedinput.min.js"></script>
 	<script type="text/javascript" src="acess/cdnjs.cloudflare.com/ajax/libs/jquery.lazy/1.7.9/jquery.lazy.min.js"></script>
 	<script type="text/javascript" src="acess/cdnjs.cloudflare.com/ajax/libs/jquery.lazy/1.7.9/jquery.lazy.plugins.min.js"></script>
 	<script type="text/javascript" src="bitrix/templates/is/fancybox/jquery.fancybox.js"></script>
@@ -665,6 +674,8 @@
 		document.body.appendChild(div);
 
 	</script>
+
+	<script src="bitrix/js/star.notification/notif_scripts.js"></script>
 	<script>
 		setTimeout(function() {
 			$('.notif_popup').addClass('opened');
